[package]
name = "lasergraph-timecode-importer"
version = "1.1.1"
edition = "2021"
authors = ["Dustin Strobel <d-strobel>"]
repository = "https://github.com/laser-zentrale-de/lasergraph-timecode-importer"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.52"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
thiserror = "2.0.12"
tempfile = "3.20.0"
