[package]
name = "lasergraph-timecode-importer"
version = "1.1.1"
edition = "2021"
authors = ["Dustin Strobel <d-strobel>"]
repository = "https://github.com/laser-zentrale-de/lasergraph-timecode-importer"

[dependencies]
serde = { version = "1.0.226", features = ["derive"] }
csv = "1.3.1"
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
env_logger = "0.11.8"
log = "0.4.28"
regex = "1.11.2"
thiserror = "2.0.16"
tempfile = "3.22.0"
